[package]
name = "rust-rocket-api-real-estate-demo"
version = "0.1.0"
authors = ["Jimmy Paris <paris@metaco.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
